// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode acp --help 1`] = `
"altimate-code acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: altimate-code.local)
                                                           [string] [default: "altimate-code.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
      --cwd           working directory [string] [default: "<HOME>"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp --help 1`] = `
"altimate-code mcp

manage MCP (Model Context Protocol) servers

Commands:
  altimate-code mcp add            add an MCP server
  altimate-code mcp list           list MCP servers and their status                   [aliases: ls]
  altimate-code mcp status         show MCP server health
  altimate-code mcp auth [name]    authenticate with an OAuth-enabled MCP server
  altimate-code mcp logout [name]  remove OAuth credentials for an MCP server
  altimate-code mcp remove <name>  remove an MCP server                                [aliases: rm]
  altimate-code mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode attach --help 1`] = `
"altimate-code attach <url>

attach to a running altimate-code server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to OPENCODE_SERVER_PASSWORD)            [string]
  -u, --username      basic auth username (defaults to OPENCODE_SERVER_USERNAME or 'opencode')
                                                                                            [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode run --help 1`] = `
"altimate-code run [message..]

run altimate with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help                          show help                                            [boolean]
  -v, --version                       show version number                                  [boolean]
      --print-logs                    print logs to stderr                                 [boolean]
      --log-level                     log level [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                          run without external plugins                         [boolean]
      --yolo                          auto-approve all permission prompts (explicit deny rules still
                                      enforced)                           [boolean] [default: false]
      --integrations                  where warehouse tools run: 'workspace' (default) lets the
                                      bound workspace's engine serve the types it provides; 'local'
                                      keeps every connection on the local drivers
                                                            [string] [choices: "workspace", "local"]
      --command                       the command to run, use message for args              [string]
  -c, --continue                      continue the last session                            [boolean]
  -s, --session                       session id to continue                                [string]
      --fork                          fork the session before continuing (requires --continue or
                                      --session)                                           [boolean]
      --share                         share the session                                    [boolean]
  -m, --model                         model to use in the format of provider/model          [string]
      --agent                         agent to use                                          [string]
      --format                        format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file                          file(s) to attach to message                           [array]
      --title                         title for the session (uses truncated prompt if no value
                                      provided)                                             [string]
      --attach                        attach to a running altimate server (e.g.,
                                      http://localhost:4096)                                [string]
  -p, --password                      basic auth password (defaults to OPENCODE_SERVER_PASSWORD)
                                                                                            [string]
      --dir                           directory to run in, path on remote server if attaching
                                                                                            [string]
      --port                          port for the local server (defaults to random port if no value
                                      provided)                                             [number]
      --variant                       model variant (provider-specific reasoning effort, e.g., high,
                                      max, minimal)                                         [string]
      --thinking                      show thinking blocks                [boolean] [default: false]
  -o, --output                        write final assistant response to file (.md or .txt)  [string]
      --audience                      output calibration: executive (no SQL/jargon, business
                                      framing) or technical (default)
                                                        [string] [choices: "executive", "technical"]
  -q, --query                         when using --file with a SQL file, analyze only the Nth
                                      statement (1-indexed)                                 [number]
      --trace                         enable session tracing (default: true, disable with
                                      --no-trace)                          [boolean] [default: true]
      --max-turns                     maximum number of assistant turns before aborting the session
                                                                                            [number]
      --dangerously-skip-permissions  auto-approve permissions that are not explicitly denied
                                      (dangerous!)                        [boolean] [default: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode debug --help 1`] = `
"altimate-code debug

debugging and troubleshooting tools

Commands:
  altimate-code debug config        show resolved configuration
  altimate-code debug lsp           LSP debugging utilities
  altimate-code debug rg            ripgrep debugging utilities
  altimate-code debug file          file system debugging utilities
  altimate-code debug scrap         list all known projects
  altimate-code debug skill         list all available skills
  altimate-code debug snapshot      snapshot debugging utilities
  altimate-code debug startup       print startup timing
  altimate-code debug agent <name>  show agent configuration details
  altimate-code debug v2            debug v2 catalog and built-in plugins
  altimate-code debug info          show debug information
  altimate-code debug paths         show global paths (data, config, cache, state)
  altimate-code debug wait          wait indefinitely (for debugging)

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers --help 1`] = `
"altimate-code providers

manage AI providers and credentials

Commands:
  altimate-code providers list               list providers and credentials            [aliases: ls]
  altimate-code providers login [target]     log in to a provider
  altimate-code providers logout [provider]  log out from a configured provider

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent --help 1`] = `
"altimate-code agent

manage agents

Commands:
  altimate-code agent create  create a new agent
  altimate-code agent list    list all available agents

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode upgrade --help 1`] = `
"altimate-code upgrade [target]

upgrade altimate to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
  -m, --method        installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode uninstall --help 1`] = `
"altimate-code uninstall

uninstall altimate-code and remove all related files

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
  -c, --keep-config   keep configuration files                            [boolean] [default: false]
  -d, --keep-data     keep session data and snapshots                     [boolean] [default: false]
      --dry-run       show what would be removed without removing         [boolean] [default: false]
  -f, --force         skip confirmation prompts                           [boolean] [default: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode serve --help 1`] = `
"altimate-code serve

starts a headless altimate-code server

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: altimate-code.local)
                                                           [string] [default: "altimate-code.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode web --help 1`] = `
"altimate-code web

start altimate-code server and open web interface

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: altimate-code.local)
                                                           [string] [default: "altimate-code.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode models --help 1`] = `
"altimate-code models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
      --verbose       use more verbose model output (includes metadata like costs)         [boolean]
      --refresh       refresh the models cache from models.dev                             [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode stats --help 1`] = `
"altimate-code stats

show token usage and cost statistics

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
      --days          show stats for the last N days (default: all time)                    [number]
      --tools         number of tools to show (default: all)                                [number]
      --models        show model statistics (default: hidden). Pass a number to show top N,
                      otherwise shows all
      --project       filter by project (default: all projects, empty string: current project)
                                                                                            [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode export --help 1`] = `
"altimate-code export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
      --sanitize      redact sensitive transcript and file data                            [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode import --help 1`] = `
"altimate-code import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github --help 1`] = `
"altimate-code github

manage GitHub agent

Commands:
  altimate-code github install  install the GitHub agent
  altimate-code github run      run the GitHub agent

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode pr --help 1`] = `
"altimate-code pr <number>

fetch and checkout a GitHub PR branch, then run altimate-code

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session --help 1`] = `
"altimate-code session

manage sessions

Commands:
  altimate-code session list                list sessions
  altimate-code session delete <sessionID>  delete a session

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode plugin --help 1`] = `
"altimate-code plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
  -g, --global        install in global config                            [boolean] [default: false]
  -f, --force         replace existing plugin version                     [boolean] [default: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db --help 1`] = `
"altimate-code db

database tools

Commands:
  altimate-code db [query]     open an interactive sqlite3 shell or run a query            [default]
  altimate-code db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
      --format        Output format               [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp list --help 1`] = `
"altimate-code mcp list

list MCP servers and their status

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp add --help 1`] = `
"altimate-code mcp add

add an MCP server

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
      --name          MCP server name                                                       [string]
      --type          Server type                              [string] [choices: "local", "remote"]
      --url           Server URL (for remote type)                                          [string]
      --command       Command to run (for local type)                                       [string]
      --env           Environment variables as key=value (repeatable)                        [array]
      --header        HTTP headers as key=value (repeatable)                                 [array]
      --oauth         Enable OAuth                                         [boolean] [default: true]
      --global        Add to global config                                [boolean] [default: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp auth --help 1`] = `
"altimate-code mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  altimate-code mcp auth list  list OAuth-capable MCP servers and their auth status    [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp logout --help 1`] = `
"altimate-code mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers list --help 1`] = `
"altimate-code providers list

list providers and credentials

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers login --help 1`] = `
"altimate-code providers login [target]

log in to a provider

Positionals:
  target  provider id (e.g. openai) or altimate auth provider URL                           [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
  -p, --provider      provider id or name to log in to (skips provider selection)           [string]
  -m, --method        login method label (skips method selection)                           [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers logout --help 1`] = `
"altimate-code providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent create --help 1`] = `
"altimate-code agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --yolo                  auto-approve all permission prompts (explicit deny rules still
                              enforced)                                   [boolean] [default: false]
      --integrations          where warehouse tools run: 'workspace' (default) lets the bound
                              workspace's engine serve the types it provides; 'local' keeps every
                              connection on the local drivers
                                                            [string] [choices: "workspace", "local"]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, list, glob, grep, webfetch, task,
                              todowrite, websearch, lsp, skill"                             [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent list --help 1`] = `
"altimate-code agent list

list all available agents

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session list --help 1`] = `
"altimate-code session list

list sessions

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
  -n, --max-count     limit to N most recent sessions                                       [number]
      --format        output format           [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session delete --help 1`] = `
"altimate-code session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github install --help 1`] = `
"altimate-code github install

install the GitHub agent

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github run --help 1`] = `
"altimate-code github run

run the GitHub agent

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]
      --event         GitHub mock event to run the agent for                                [string]
      --[key]         GitHub personal access token (<redacted example>)                    [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db path --help 1`] = `
"altimate-code db path

print the database path

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --yolo          auto-approve all permission prompts (explicit deny rules still enforced)
                                                                          [boolean] [default: false]
      --integrations  where warehouse tools run: 'workspace' (default) lets the bound workspace's
                      engine serve the types it provides; 'local' keeps every connection on the
                      local drivers                         [string] [choices: "workspace", "local"]"
`;
